--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -20,7 +20,7 @@ a {
   box-shadow: none;
   border-color: inherit;
 }
-/* Header top */
+/* Header */
 
 .header-top-strip {
   background-color: var(--color-131921);
@@ -74,4 +74,18 @@ a {
 .header-bottom .dropdown-item:hover {
   background-color: transparent;
   color: var(--color-febd69) !important;
+}
+
+/* Footer */
+
+footer {
+  background-color: var(--color-232f3e);
+}
+footer:not(:first-child) {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+footer .input-group-text {
+  background-color: var(--color-232f3e);
+  color: white;
+  padding: 8px 17px;
 }
