--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -8,9 +8,10 @@
   --color-3b4149: #3b4149;
   --color-febd69: #febd69;
   --color-232f3e: #232f3e;
+  --color-bf4800: #bf4800;
 }
 body {
-  font-family: "Rubik", sans-serif;
+  font-family: "Roboto Slab", serif;
 }
 a {
   text-decoration: none;
@@ -35,7 +36,17 @@ a {
 .gap-30 {
   gap: 30px;
 }
-
+.button {
+  background-color: var(--color-232f3e);
+  color: white;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 25px;
+}
+.button:hover {
+  background-color: var(--color-febd69);
+  color: var(--color-131921);
+}
 .header-upper {
   background-color: var(--color-131921);
 }
@@ -75,9 +86,9 @@ a {
   background-color: transparent;
   color: var(--color-febd69) !important;
 }
+/* End Header */
 
 /* Footer */
-
 footer {
   background-color: var(--color-232f3e);
 }
@@ -89,3 +100,64 @@ footer .input-group-text {
   color: white;
   padding: 8px 17px;
 }
+/* End Footer */
+
+/* Home Page */
+.main-banner-content {
+  top: 15%;
+  left: 5%;
+}
+.main-banner-content h4 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+.main-banner-content h5 {
+  font-size: 42px;
+  line-height: 54px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  padding: 0;
+  text-transform: none;
+}
+.main-banner-content P {
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.4;
+  color: var(--color-131921);
+}
+
+.small-banner-content {
+  top: 25%;
+  left: 10%;
+}
+.small-banner-content h4 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+.small-banner-content h5 {
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  text-transform: none;
+}
+.small-banner-content P {
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.4;
+  color: var(--color-131921);
+}
+.small-banner {
+  width: 49%;
+}
+/* End Home Page */
