--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -240,6 +240,20 @@ footer .input-group-text {
   line-height: 22px;
   color: var(--color-777777);
 }
+.single-blog-card a {
+  font-size: 15px;
+  color: var(--color-777777);
+  margin-bottom: 20px;
+}
+.single-blog-card h3 {
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+}
+.single-blog-card p {
+  color: var(--color-777777);
+  font-size: 14px;
+}
 /* blog part end */
 
 /* product card */
@@ -456,3 +470,86 @@ footer .input-group-text {
   color: var(--color-777777);
 }
 /* contact end */
+
+/* compare product */
+.compare-product-card {
+  padding: 20px 15px;
+  background-color: white;
+  border-radius: 10px;
+}
+.compare-product-card .cross,
+.wishlist-card .cross {
+  top: 15px;
+  right: 15px;
+  width: 20px;
+  padding: 3px;
+  cursor: pointer;
+}
+.compare-product-details h5.title,
+.wishlist-card h5.title {
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 500;
+  color: var(--color-1c1c1b);
+}
+.compare-product-details h6.price,
+.wishlist-card h6.price {
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 400;
+}
+.compare-product-card .product-detail {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+/* compare product end */
+
+/* login */
+.action-customer {
+  padding: 20px;
+  background-color: white;
+  width: 500px;
+  margin: 30px auto;
+  border-radius: 10px;
+}
+.action-customer h3 {
+  font-size: 19px;
+  font-weight: 500;
+  color: var(--color-777777);
+}
+.action-customer .form-control {
+  height: 50px;
+  background-color: var(--color-f5f5f7);
+  font-size: 14px;
+  color: var(--color-777777);
+  border-radius: 10px;
+  border-color: transparent;
+}
+.action-customer a {
+  font-size: 15px;
+  font-weight: 400;
+  color: var(--color-1c1c1b);
+}
+.action-customer .signup {
+  background-color: var(--color-febd69);
+  color: var(--color-131921);
+}
+.action-customer .signup:hover {
+  background-color: var(--color-131921);
+  color: white;
+}
+.action-customer p {
+  font-size: 13px;
+  color: var(--color-777777);
+}
+/* login end */
+
+/* policy */
+.policy {
+  background-color: white;
+  padding: 30px;
+}
+/* policy end */
